compiler/syntax/tests/parsing/errors/expressions/try.res
  let parsedPayload =
    try (Js.Json.parseExn(response)) {
    | _ => Js.Json.null
    }
